# Tycho-Space-RL

./: .gitignore  Project Plan.md  README.md  main.py
archive/: backlog.txt  main.py  misc_prompts.txt  tycho_space_env.py
misc_copilot_context/: gymnasium_properties.md
tycho-space-rl/: README.md  pyproject.toml
tycho-space-rl/src/gymnasium_env/envs/: __init__.py  tycho_space.py
tycho-space-rl/src/standalone_game/: game_logic.py  main.py
tycho-space-rl/src/tycho-space-rl/standalone_game/: main.py
tycho-space-rl/src/tycho_space_rl/gymnasium_env/: __init__.py
tycho-space-rl/src/tycho_space_rl/gymnasium_env/wrappers/: __init__.py
tycho-space-rl/tests/: test_game_logic.py  test_tycho_space.py
