[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tycho-space-rl"
version = "0.1.0"
description = "A Gymnasium-compliant environment and standalone game for Tycho Space RL."
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = [
    "gymnasium",
    "pygame",
    "numpy"
]
license = { text = "MIT" }
readme = "README.md"